examples/test/testpolicy14947.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14947
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key45: value32
      key32: value44
      key34: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value36
      podSelector:
        matchLabels:
          key30: value23
